Fix deployment issues: MIME types, script loading, and favicon

--- a/index.html
+++ b/index.html
@@ -483,13 +483,13 @@
             <div id="drill5Instructions" class="mb-6 p-4 bg-gray-100 rounded-md hidden">
                 <p>Develop fluency and measure it quantitatively using the fluency measurement tool.</p>
                 <div class="mt-4">
-                    <a
-                        href="https://eihgkrqz.manus.space/"
-                        target="_blank"
-                        class="inline-block px-6 py-3 btn-blue text-white rounded-md shadow transition-colors"
-                    >
-                        Open Fluency Measurement Tool
-                    </a>
+                                            <a
+                            href="https://iwnkalha.manus.space/"
+                            target="_blank"
+                            class="inline-block px-6 py-3 btn-blue text-white rounded-md shadow transition-colors"
+                        >
+                            Open Fluency Measurement Tool
+                        </a>
                 </div>
             </div>
             
@@ -557,21 +557,9 @@
         </section>
     </main>
 
-    <footer class="mt-8 p-4 text-center">
-        <a href="https://manus.ai" target="_blank" class="text-blue-600 hover:text-blue-800 flex items-center justify-center">
-            <span class="mr-2">Made with Manus</span>
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                <path d="M12 5c-7.7 0-10 5-10 5v2c0 5 2.3 10 10 10s10-5 10-10v-2c0 0-2.3-5-10-5z"></path>
-                <path d="M12 5V3"></path>
-                <path d="M9 5V3"></path>
-                <path d="M15 5V3"></path>
-                <circle cx="12" cy="13" r="2"></circle>
-            </svg>
-            <span class="ml-2">Create my website</span>
-        </a>
-    </footer>
+
+    <script src="config.js"></script>
     <script src="script.js"></script>
-    </script>
 <manus-content-root></manus-content-root><script>
 			var __manus_space_editor_info = {
 			spaceId : 'rmgehrzj',
