--- a/index.html
+++ b/index.html
@@ -247,6 +247,13 @@
                     Pause
                 </button>
                 <button
+                    id="continueReadingBtn"
+                    class="px-6 py-3 btn-green text-white rounded-md shadow transition-colors"
+                    disabled
+                >
+                    Continue
+                </button>
+                <button
                     id="stopReadingBtn"
                     class="px-6 py-3 btn-red text-white rounded-md shadow transition-colors"
                     disabled
