--- a/index.html
+++ b/index.html
@@ -167,6 +167,15 @@
                 <div class="md:col-span-1 border-r pr-6">
                     <h3 class="text-lg font-semibold mb-4">Your Lessons</h3>
                     
+                    <div class="mb-4">
+                        <button
+                            id="createNewLessonFromContentBtn"
+                            class="w-full px-4 py-2 btn-green text-white rounded-md shadow transition-colors"
+                        >
+                            + Create New Lesson
+                        </button>
+                    </div>
+                    
                     <div id="lessonsList" class="space-y-2">
                         <p class="text-gray-500">No lessons found. Create a new lesson to get started.</p>
                     </div>
