--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
             
             <div class="mb-6">
                 <label for="rateRange" class="block text-sm font-medium text-gray-700 mb-2">
-                    Speech Rate: <span id="rateValue">1</span>x
+                    Speech Rate: <span id="rateValue">0.7</span>x
                 </label>
                 <input
                     type="range"
@@ -236,7 +236,7 @@
                     min="0.5"
                     max="2"
                     step="0.1"
-                    value="1"
+                    value="0.7"
                     class="w-full"
                 >
             </div>
@@ -472,7 +472,10 @@
             
             <div id="drill4Instructions" class="mb-6 p-4 bg-gray-100 rounded-md hidden">
                 <p>Record yourself reading the lesson, then compare your pronunciation with the original audio.</p>
-                <div class="mt-4 flex space-x-4">
+                <div id="recordingIndicator" class="mt-2 p-2 bg-red-100 text-red-700 rounded-md hidden text-center">
+                    <span class="font-bold">🔴 RECORDING...</span>
+                </div>
+                <div class="mt-4 flex flex-wrap gap-2">
                     <button
                         id="startRecordingBtn"
                         class="px-6 py-3 btn-pink text-white rounded-md shadow transition-colors"
@@ -492,6 +495,13 @@
                         disabled
                     >
                         Play Recording
+                    </button>
+                    <button
+                        id="saveDrillRecordingBtn"
+                        class="px-6 py-3 btn-green text-white rounded-md shadow transition-colors"
+                        disabled
+                    >
+                        Save Recording
                     </button>
                     <button
                         id="reRecordBtn"
