--- a/landing/signup.html
+++ b/landing/signup.html
@@ -203,7 +203,7 @@
     <footer class="bg-gray-900 text-white py-12">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <p class="text-gray-400">
-                © 2025 Language Bridge Technology. Built on Manus.im AI Platform.
+                © 2025 AnyLingo. Built on Manus.im AI Platform.
             </p>
         </div>
     </footer>
