--- a/index.html
+++ b/index.html
@@ -49,22 +49,30 @@
                     return;
                 }
 
-                // Verify token with backend
-                const response = await fetch(`${CONFIG.API_URL}/api/auth/me`, {
-                    headers: {
-                        'Authorization': `Bearer ${token}`,
-                        'Content-Type': 'application/json'
-                    }
-                });
+                // Try to verify token with backend, but don't fail if backend is down
+                try {
+                    const response = await fetch(`${CONFIG.API_URL}/api/auth/me`, {
+                        headers: {
+                            'Authorization': `Bearer ${token}`,
+                            'Content-Type': 'application/json'
+                        },
+                        timeout: 5000 // 5 second timeout
+                    });
 
-                if (response.ok) {
-                    // User is authenticated, redirect to app
-                    window.location.href = CONFIG.APP_URL;
-                } else {
-                    // Token is invalid, clear it and redirect to landing
-                    localStorage.removeItem('anylingo_token');
-                    window.location.href = CONFIG.LANDING_URL;
+                    if (response.ok) {
+                        // User is authenticated, redirect to app
+                        window.location.href = CONFIG.APP_URL;
+                        return;
+                    }
+                } catch (backendError) {
+                    console.log('Backend not available, proceeding with local auth check');
                 }
+
+                // If we get here, either backend is down or token is invalid
+                // For now, redirect to landing page
+                localStorage.removeItem('anylingo_token');
+                window.location.href = CONFIG.LANDING_URL;
+                
             } catch (error) {
                 console.error('Auth check error:', error);
                 // On error, redirect to landing page
