Fix frontend - remove process.env reference that doesn't exist in browser

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
     <script>
         // Configuration
         const CONFIG = {
-            API_URL: process.env.NODE_ENV === 'production' 
-                ? 'https://anylingobackend.vercel.app' 
-                : 'http://localhost:5000',
+            API_URL: 'https://anylingobackend.vercel.app',
             LANDING_URL: '/landing/index.html',
             APP_URL: '/app/index.html',
             LOGIN_URL: '/login.html'
