--- a/signup.html
+++ b/signup.html
@@ -23,10 +23,10 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
-                    <a href="index.html" class="text-2xl font-bold text-blue-600">AnyLingo™</a>
+                    <a href="/" class="text-2xl font-bold text-blue-600">AnyLingo™</a>
                 </div>
                 <div class="flex items-center space-x-4">
-                    <a href="index.html" class="text-gray-700 hover:text-blue-600 transition-colors">Back to Home</a>
+                    <a href="/" class="text-gray-700 hover:text-blue-600 transition-colors">Back to Home</a>
                 </div>
             </div>
         </div>
