--- a/signup.html
+++ b/signup.html
@@ -70,6 +70,7 @@
                             <select id="targetLanguage" name="targetLanguage" required 
                                     class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-transparent">
                                 <option value="">Select a language</option>
+                                <option value="en">English</option>
                                 <option value="es">Spanish</option>
                                 <option value="fr">French</option>
                                 <option value="de">German</option>
