--- a/signup.html
+++ b/signup.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Start your free trial with AnyLingo. No credit card required for the first 7 days.">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="app/favicon.svg">
-    <link rel="icon" type="image/x-icon" href="app/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     
     <!-- Stylesheets -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
