--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 
                 <div class="flex items-center space-x-4">
-                    <a href="#login" class="text-gray-700 hover:text-blue-600 transition-colors">Login</a>
+                    <a href="/signup.html#login" class="text-gray-700 hover:text-blue-600 transition-colors">Login</a>
                     <a href="/signup.html" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg font-medium transition-colors">
                         Start Free Trial
                     </a>
