--- a/signup.html
+++ b/signup.html
@@ -127,7 +127,7 @@
                     </div>
                     
                     <!-- Login Form -->
-                    <div class="bg-gray-50 rounded-2xl p-8">
+                    <div id="login" class="bg-gray-50 rounded-2xl p-8">
                         <h3 class="text-xl font-bold text-gray-900 mb-6 text-center">Already have an account?</h3>
                         <form id="login-form" class="space-y-4">
                             <div>
