--- a/app/index.html
+++ b/app/index.html
@@ -143,6 +143,26 @@
                               placeholder="Paste your lesson content here..."></textarea>
                 </div>
                 
+                <div>
+                    <label for="lessonTargetLanguage" class="block text-sm font-medium text-gray-700 mb-2">Target Language</label>
+                    <select id="lessonTargetLanguage" name="targetLanguage" required 
+                            class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        <option value="">Select a language</option>
+                        <option value="en">English</option>
+                        <option value="es">Spanish</option>
+                        <option value="fr">French</option>
+                        <option value="de">German</option>
+                        <option value="it">Italian</option>
+                        <option value="pt">Portuguese</option>
+                        <option value="ru">Russian</option>
+                        <option value="ja">Japanese</option>
+                        <option value="ko">Korean</option>
+                        <option value="zh">Chinese</option>
+                        <option value="ar">Arabic</option>
+                        <option value="hi">Hindi</option>
+                    </select>
+                </div>
+                
                 <div class="flex space-x-4">
                     <button type="submit" class="px-6 py-2 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-colors">
                         Save Lesson
