--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 </div>
                 
                 <div class="flex items-center space-x-4">
-                    <a href="/signup.html#login" class="text-gray-700 hover:text-blue-600 transition-colors">Login</a>
-                    <a href="/signup.html" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg font-medium transition-colors">
+                    <a href="/landing/signup.html#login" class="text-gray-700 hover:text-blue-600 transition-colors">Login</a>
+                    <a href="/landing/signup.html" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-2 rounded-lg font-medium transition-colors">
                         Start Free Trial
                     </a>
                 </div>
@@ -58,7 +58,7 @@
                         Transform your language learning journey with AI-driven subconscious training. Learn 5x faster through personalized, guided self-learning.
                     </p>
                     <div class="flex flex-col sm:flex-row gap-4">
-                        <a href="/signup.html" class="bg-blue-600 hover:bg-blue-700 text-white px-8 py-4 rounded-lg font-semibold text-lg transition-colors text-center">
+                        <a href="/landing/signup.html" class="bg-blue-600 hover:bg-blue-700 text-white px-8 py-4 rounded-lg font-semibold text-lg transition-colors text-center">
                             Start Learning Free
                         </a>
                         <a href="#demo" class="border-2 border-blue-600 text-blue-600 hover:bg-blue-600 hover:text-white px-8 py-4 rounded-lg font-semibold text-lg transition-colors text-center">
@@ -362,7 +362,7 @@
                     </div>
                     
                     <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                        <a href="/signup.html" class="bg-blue-600 hover:bg-blue-700 text-white px-8 py-4 rounded-lg font-semibold text-lg transition-colors text-center">
+                        <a href="/landing/signup.html" class="bg-blue-600 hover:bg-blue-700 text-white px-8 py-4 rounded-lg font-semibold text-lg transition-colors text-center">
                             Start Free Trial
                         </a>
                         <a href="#demo" class="border-2 border-blue-600 text-blue-600 hover:bg-blue-600 hover:text-white px-8 py-4 rounded-lg font-semibold text-lg transition-colors text-center">
@@ -384,7 +384,7 @@
                 Join thousands of learners who have discovered the power of subconscious language training.
             </p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center">
-                <a href="/signup.html" class="bg-white text-blue-600 hover:bg-gray-100 px-8 py-4 rounded-lg font-semibold text-lg transition-colors">
+                <a href="/landing/signup.html" class="bg-white text-blue-600 hover:bg-gray-100 px-8 py-4 rounded-lg font-semibold text-lg transition-colors">
                     Start Free Trial
                 </a>
                 <a href="#demo" class="border-2 border-white text-white hover:bg-white hover:text-blue-600 px-8 py-4 rounded-lg font-semibold text-lg transition-colors">
