--- a/signup.html
+++ b/signup.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Start your free trial with AnyLingo. No credit card required for the first 7 days.">
     
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/svg+xml" href="favicon.svg">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     
     <!-- Stylesheets -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
@@ -23,10 +23,10 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
-                    <a href="/landing/" class="text-2xl font-bold text-blue-600">AnyLingo™</a>
+                    <a href="index.html" class="text-2xl font-bold text-blue-600">AnyLingo™</a>
                 </div>
                 <div class="flex items-center space-x-4">
-                    <a href="/landing/" class="text-gray-700 hover:text-blue-600 transition-colors">Back to Home</a>
+                    <a href="index.html" class="text-gray-700 hover:text-blue-600 transition-colors">Back to Home</a>
                 </div>
             </div>
         </div>
